// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Share> renders 1`] = `
<View
  pointerEvents="auto"
>
  <View
    accessibilityComponentType={undefined}
    accessibilityLabel={undefined}
    accessibilityTraits={undefined}
    accessible={true}
    hasTVPreferredFocus={undefined}
    hitSlop={undefined}
    isTVSelectable={true}
    nativeID={undefined}
    onLayout={undefined}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      Array [
        Object {
          "borderRadius": 3,
          "margin": 5,
        },
        false,
        false,
        undefined,
      ]
    }
    testID={undefined}
    tvParallaxProperties={undefined}
  >
    <View
      style={
        Array [
          Object {
            "alignContent": "center",
            "alignItems": "center",
            "backgroundColor": "#4a4a4a",
            "borderRadius": 3,
            "display": "flex",
            "flexDirection": "row",
            "justifyContent": "center",
          },
          Object {
            "height": 45,
            "paddingHorizontal": 30,
          },
          false,
          false,
          false,
          Object {
            "height": 45,
            "paddingHorizontal": 30,
          },
          false,
          false,
          false,
          undefined,
        ]
      }
    >
      <Image
        resizeMode="contain"
        source={
          Object {
            "testUri": "../../../components/Icon/assets/share.png",
          }
        }
        style={
          Array [
            Object {
              "backgroundColor": "transparent",
              "height": 20,
              "width": 20,
            },
            Object {
              "height": 16,
              "marginRight": 10,
              "width": 16,
            },
            undefined,
          ]
        }
      />
      <Text
        accessible={true}
        allowFontScaling={true}
        ellipsizeMode="tail"
        numberOfLines={undefined}
        style={
          Array [
            Object {
              "color": "#4a4a4a",
              "fontFamily": undefined,
            },
            false,
            Object {
              "fontWeight": "600",
            },
            false,
            false,
            Object {
              "fontSize": 16,
              "lineHeight": 20.8,
            },
            false,
            false,
            false,
            false,
            false,
            false,
            false,
            false,
            Object {
              "color": "#ffffff",
              "fontSize": 14,
              "lineHeight": 16.8,
            },
          ]
        }
      >
        Share
      </Text>
    </View>
  </View>
</View>
`;

exports[`<Share> when {caption} 1`] = `
<share
  caption="Hello world"
/>
`;

exports[`<Share> when {title} 1`] = `
<share
  title="Press me"
/>
`;
